welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:7: error: ')' expected but 'if' found.
if((a<=19 && a>=13 && c<=19 && c>=13){return 2}
^countTeen:8: error: ')' expected but 'if' found.
if((a<=19 && a>=13 && d<=19 && d>=13){return 2}
^countTeen:9: error: ')' expected but 'if' found.
if((b<=19 && b>=13 && c<=19 && c>=13){return 2}
^countTeen:10: error: ')' expected but 'if' found.
if((b<=19 && b>=13 && d<=19 && d>=13){return 2}
^countTeen:11: error: ')' expected but 'if' found.
if((c<=19 && c>=13 && d<=19 && d>=13){return 2}
^countTeen:12: error: ')' expected but 'if' found.
if (a<=19 && a>=13 && b<=19 && b>=13 && c<=19 && c>=13){return 3}
^countTeen:13: error: ';' expected but 'if' found.
if (a<=19 && a>=13 && b<=19 && b>=13 && d<=19 && d>=13){return 3}
^